force-app/main/default/objects/QBO_Metadata__mdt/QBO_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>QBO Metadata</label>
    <pluralLabel>QBO Metadata</pluralLabel>
</CustomObject>