force-app/main/default/objects/QBO_Metadata__mdt/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <label>Base Url</label>
    <type>Url</type>
</CustomField>