force-app/main/default/objects/QBO_Metadata__mdt/fields/MinorVersion__c.field-meta.xml
<CustomField>
    <fullName>MinorVersion__c</fullName>
    <label>MinorVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>